--- a/arbor-games/classroom/index.html
+++ b/arbor-games/classroom/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,9 +11,9 @@
         :root { --bg-color: #1a1a1a; --term-green: #4ade80; }
         body { background-color: var(--bg-color); margin: 0; overflow: hidden; font-family: 'VT323', monospace; user-select: none; }
         
-        /* CRT EFFECT */
+        /* CRT EFFECT - Z-Index lowered to 5 (Above canvas, below UI) */
         .crt-overlay {
-            position: fixed; inset: 0; pointer-events: none; z-index: 50;
+            position: fixed; inset: 0; pointer-events: none; z-index: 5;
             background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
             background-size: 100% 2px, 3px 100%;
             animation: flicker 0.15s infinite;
@@ -21,13 +22,14 @@
 
         /* UI CONTAINERS */
         #game-wrapper { position: relative; width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; background: #000; }
-        canvas { image-rendering: pixelated; box-shadow: 0 0 50px rgba(0,0,0,0.8); }
+        canvas { image-rendering: pixelated; box-shadow: 0 0 50px rgba(0,0,0,0.8); z-index: 1; }
 
-        /* DIALOGUE SYSTEM */
+        /* DIALOGUE SYSTEM - Make clickable for mobile */
         .dialogue-box {
             position: absolute; bottom: 5%; width: 90%; max-width: 800px; min-height: 160px;
             background: #fff; border: 4px solid #000; box-shadow: 8px 8px 0 #000;
             padding: 25px; z-index: 20; display: none; color: #000; font-size: 1.8rem; line-height: 1.2;
+            cursor: pointer; /* Indication that it is clickable */
         }
         .speaker-name {
             position: absolute; top: -25px; left: 0; background: #000; color: #fff;
