--- a/arbor-games/memory/index.html
+++ b/arbor-games/memory/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -125,7 +124,8 @@
     <!-- VICTORY SCREEN -->
     <div id="victory-screen" class="overlay hidden-fade p-4 text-center">
         <h2 class="text-3xl md:text-5xl font-black text-yellow-400 mb-2 drop-shadow-[0_0_15px_rgba(250,204,21,0.5)]">GARDEN BLOOMED</h2>
-        <p class="text-xl md:text-2xl text-white mb-8">Final Score: <span id="final-score">0</span></p>
+        <p class="text-xl md:text-2xl text-white mb-2">Final Score: <span id="final-score">0</span></p>
+        <p class="text-lg text-gray-400 mb-8">High Score: <span id="high-score">0</span></p>
         <button onclick="window.location.reload()" class="px-8 py-3 border-2 border-white text-white font-bold hover:bg-white hover:text-black transition-colors">
             REPLAY
         </button>
