feat(classroom): Add internationalization for UI
Introduces i18n support for the classroom simulator by adding a translations object and updating the start screen to dynamically load text based on locale. This enables multilingual support for the game's interface elements and dialogue.

--- a/arbor-games/classroom/index.html
+++ b/arbor-games/classroom/index.html
@@ -128,9 +128,8 @@
         <!-- UI: Start Screen -->
         <div id="start-screen">
             <h1 class="logo-text text-4xl md:text-6xl">CLASSROOM<br><span class="text-white text-2xl md:text-4xl">SIMULATOR</span></h1>
-            <p class="text-gray-400 mb-8 font-mono text-center text-sm md:text-base">Evalúa a tus compañeros.<br>Escribe tus respuestas.<br>Gana el ranking.</p>
+            <p id="start-desc" class="text-gray-400 mb-8 font-mono text-center text-sm md:text-base"></p>
             <button id="btn-start" class="px-8 py-4 bg-green-600 hover:bg-green-500 text-white font-bold font-mono text-xl md:text-2xl border-4 border-white shadow-[6px_6px_0px_#000] active:translate-y-1 active:shadow-none transition-all">
-                EMPEZAR CLASE
             </button>
         </div>
     </div>
