--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
-<script type="importmap">
-{
-  "imports": {
-    "rxjs": "https://esm.sh/rxjs@7.8.1",
-    "rxjs/operators": "https://esm.sh/rxjs@7.8.1/operators",
-    "rxjs/ajax": "https://esm.sh/rxjs@7.8.1/ajax",
-    "rxjs/webSocket": "https://esm.sh/rxjs@7.8.1/webSocket",
-    "rxjs/testing": "https://esm.sh/rxjs@7.8.1/testing",
-    "rxjs/fetch": "https://esm.sh/rxjs@7.8.1/fetch",
-    "react": "https://esm.sh/react@18.3.1",
-    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client"
-  }
-}
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arbor Games Arcade</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "rxjs": "https://esm.sh/rxjs@7.8.1",
+        "rxjs/operators": "https://esm.sh/rxjs@7.8.1/operators",
+        "rxjs/ajax": "https://esm.sh/rxjs@7.8.1/ajax",
+        "rxjs/webSocket": "https://esm.sh/rxjs@7.8.1/webSocket",
+        "rxjs/testing": "https://esm.sh/rxjs@7.8.1/testing",
+        "rxjs/fetch": "https://esm.sh/rxjs@7.8.1/fetch",
+        "react": "https://esm.sh/react@18.3.1",
+        "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+        "react-dom/client": "https://esm.sh/react-dom@18.3.1/client"
+      }
+    }
+    </script>
+</head>
+<body class="bg-neutral-900 text-white">
+    <div id="root"></div>
+    <!-- Entry point for the React application -->
+    <script type="module" src="./index.tsx"></script>
+</body>
+</html>
