feat: Remove unused hello-world game and add rotation warnings
Removes the legacy "hello-world" game template from the manifest.
Introduces a fixed-position "rotation-warning" overlay to games that require portrait mode (classroom, memory, primer-trabajo), which is displayed when the device is in landscape orientation on smaller screens.

--- a/arbor-games/classroom/index.html
+++ b/arbor-games/classroom/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Arbor Classroom: Ace Logic</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
@@ -97,6 +97,15 @@
         #start-screen { position: absolute; inset: 0; background: #111; z-index: 60; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; }
         .logo-text { font-family: 'Press Start 2P'; color: #4ade80; text-shadow: 4px 4px 0 #166534; margin-bottom: 2rem; text-align: center; line-height: 1.5; }
 
+        /* ROTATION WARNING */
+        #rotate-warning {
+            display: none;
+            position: fixed; inset: 0; z-index: 9999;
+            background: #000; color: #4ade80;
+            flex-direction: column; align-items: center; justify-content: center;
+            text-align: center; font-family: 'Press Start 2P', cursive;
+        }
+
         /* MOBILE RESPONSIVE OVERRIDES */
         @media (max-width: 768px) {
             .dialogue-box { font-size: 1.3rem; height: auto; bottom: 10px; padding: 15px; padding-bottom: 60px; /* Space for button */ }
@@ -115,9 +124,22 @@
             #player-input { width: 100%; font-size: 1.5rem; }
             #btn-submit { width: 100%; padding: 0.8rem; }
         }
+
+        /* Enforce Landscape on Mobile */
+        @media screen and (orientation: portrait) and (max-width: 768px) {
+            #game-wrapper, .crt-overlay { display: none !important; }
+            #rotate-warning { display: flex; }
+        }
     </style>
 </head>
 <body>
+
+    <!-- ROTATION WARNING -->
+    <div id="rotate-warning">
+        <div class="text-6xl mb-4">📱 ⟳</div>
+        <h1 class="text-xl mb-2 uppercase">Landscape Mode<br>Required</h1>
+        <p class="text-xs opacity-70 font-mono">For the best cinematic experience.</p>
+    </div>
 
     <div class="crt-overlay"></div>
 
