feat: Enhance UI responsiveness and retro aesthetic
This commit refactors several game UIs to improve their responsiveness and lean into a more pronounced retro, pixelated, or "cyberdeck" aesthetic.

Key changes include:
- Implementing fluid font sizing (`clamp`) for better readability across various resolutions.
- Increasing maximum widths for elements like dialogue boxes and card grids to better utilize larger screens.
- Adjusting font sizes and element spacing for a more cohesive retro feel.
- Introducing new CSS variables and gradients for a darker, more atmospheric look in the "Primer Trabajo" game.
- Optimizing the "Primer Trabajo" game with a fixed 320x240 resolution, an audio synthesis engine, and improved input handling for a true retro experience.
- Updating the `manifest.json` to reflect a new icon for the "Classroom" game, although the icon itself is not included in this diff.

--- a/arbor-games/memory/index.html
+++ b/arbor-games/memory/index.html
@@ -41,7 +41,7 @@
             padding: 8px; 
             text-align: center; 
             font-weight: 800; 
-            font-size: 0.85rem; 
+            font-size: clamp(0.7rem, 2vw, 1.5rem); 
             line-height: 1.1;
             display: flex;
             align-items: center;
@@ -118,7 +118,8 @@
 
         <!-- Grid -->
         <main class="flex-1 perspective-container flex items-center justify-center">
-            <div id="card-grid" class="grid grid-cols-3 md:grid-cols-4 gap-3 md:gap-4 w-full max-w-4xl mx-auto h-full max-h-[85vh] content-center">
+            <!-- Increased max-width for 4K support -->
+            <div id="card-grid" class="grid grid-cols-3 md:grid-cols-4 gap-3 md:gap-6 w-full max-w-[95vw] mx-auto h-full max-h-[85vh] content-center">
                 <!-- Cards Injected Here -->
             </div>
         </main>
