--- a/arbor-games/primer-trabajo/index.html
+++ b/arbor-games/primer-trabajo/index.html
@@ -205,6 +205,18 @@
 </head>
 <body>
 
+    <!-- UI: Start Screen -->
+    <div id="start-screen" class="absolute inset-0 z-50 flex flex-col items-center justify-center bg-slate-900 text-cyan-400 p-6">
+        <h1 class="text-4xl md:text-6xl font-bold mb-4 font-mono tracking-tighter border-b-4 border-cyan-500 pb-2">CORP_SIM.EXE</h1>
+        <p class="text-sm md:text-base mb-8 text-center max-w-md font-mono opacity-80">
+            INITIALIZING WORKER PROTOCOLS...<br>
+            PLEASE SUBMIT BIOMETRIC DATA TO BEGIN.
+        </p>
+        <button id="btn-start" class="px-8 py-4 bg-cyan-600 hover:bg-cyan-500 text-white font-bold font-mono text-xl tracking-widest shadow-[0_0_20px_rgba(8,145,178,0.5)] transition-all uppercase active:scale-95">
+            BOOT SYSTEM
+        </button>
+    </div>
+
     <div class="console-shell">
         <div class="brand-stripe">ARBOR SYSTEMS INC.</div>
 
