--- a/arbor-games/memory/index.html
+++ b/arbor-games/memory/index.html
@@ -102,7 +102,7 @@
     <!-- GAME HUD -->
     <div id="game-ui" class="relative z-10 flex flex-col h-screen p-4 hidden">
         <!-- Top Bar: Updated with Z-Index 50 and pointer-events-none -->
-        <header class="flex justify-between items-end mb-4 relative z-50 pointer-events-none">
+        <header class="flex justify-between items-end mb-2 relative z-50 pointer-events-none h-16 shrink-0">
             <div class="pointer-events-auto">
                 <h1 class="text-2xl md:text-3xl font-black tracking-tighter text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-emerald-600">MEMORY<br>GARDEN</h1>
                 <p id="lesson-topic" class="text-[0.6rem] md:text-xs text-emerald-400 font-mono uppercase tracking-widest mt-1 opacity-0 transition-opacity duration-1000 max-w-[200px] truncate">...</p>
@@ -117,9 +117,9 @@
         </header>
 
         <!-- Grid -->
-        <main class="flex-1 perspective-container flex items-center justify-center relative z-0">
-            <!-- Increased max-width for 4K support -->
-            <div id="card-grid" class="grid grid-cols-3 md:grid-cols-4 gap-3 md:gap-6 w-full max-w-[95vw] mx-auto h-full max-h-[85vh] content-center">
+        <main class="flex-1 perspective-container flex items-start justify-center relative z-0 pt-4 md:pt-8">
+            <!-- Decreased max-height to ensure header visibility and added margin top -->
+            <div id="card-grid" class="grid grid-cols-3 md:grid-cols-4 gap-3 md:gap-4 w-full max-w-[95vw] mx-auto max-h-[75vh] content-start">
                 <!-- Cards Injected Here -->
             </div>
         </main>
